fixed all main issues with portfolio spacing on desktop

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body{
 .wrapper{
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .snowflake {
@@ -196,14 +197,15 @@ a:active { text-decoration: underline; }
   
   .cardContentWrapper{
     display: flex;
-    height: 120%;
+    height: 100vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     position: center;
     overflow-y: scroll;
-    margin-left: 5vw;
-    margin-top: 15vh;
+    padding-top: 3%;
+    padding-left: 3%;
+    padding-right: 3%;
   }
   
   .card{
@@ -265,6 +267,8 @@ a:active { text-decoration: underline; }
     align-items: center;
     flex-direction: column;
     width: 50vw;
+    padding-left: 3%;
+    padding-right: 3%;
 }
 
 .slideshowContainer {
@@ -273,6 +277,7 @@ a:active { text-decoration: underline; }
     position: relative;
     margin: -25px;
     margin-top: auto;
+    box-shadow: 0 0 0 0 10px #252525;
   }
   
   /* Next & previous buttons */
@@ -322,6 +327,8 @@ a:active { text-decoration: underline; }
     padding: 8px 12px;
     position: absolute;
     top: 0;
+    text-shadow: 0px 0px 8px #000000;
+
   }
   
   /* The dots/bullets/indicators */
@@ -417,7 +424,7 @@ a:active { text-decoration: underline; }
    .footerContainer{
     color: #252525;
     position: absolute;
-    bottom: 5;
+    bottom: 5px;
     align-self: center;
     font-size: 0.7rem;
    }
